--- a/treinamentolgpd/TreinamentosLGPD13.html
+++ b/treinamentolgpd/TreinamentosLGPD13.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento LGPD</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -41,7 +41,7 @@
     <h3>Impactos da LGPD nos fornecedores da instituição</h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=4129d488-03a8-428f-9da9-f60f66754370&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e11a3904-e70b-4dd4-acc1-6999d1b060e7&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 13 - Impactos da LGPD nos fornecedores da instituição.mp4"></iframe>
         <br>
