--- a/treinamentolgpd/TreinamentosLGPD8.html
+++ b/treinamentolgpd/TreinamentosLGPD8.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento LGPD</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -41,7 +41,7 @@
     <h3> Os 10 Princípios para Tratamento de Dados pessoais </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e8434bc4-f2f3-4b16-a8b4-01cdcf6d4fac&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=7ad5bcd1-4b40-4b04-9937-f94dc2dd2bcb&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 8 - Os 10 Princípios para Tratamento de Dados pessoais.mp4"></iframe>
         <br>
