--- a/treinamentoregulatorio/TreinamentoRegulatorio.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento Regulatório</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -31,7 +31,7 @@
     <h3> Cadastro </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=78a6fb21-08ab-41be-8a37-84c2ebadb45e&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=89793c8e-f93c-4082-9cf6-88a570ffec05&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="Plataforma Brasil cadastro.mp4"></iframe>
         <br>
