--- a/treinamentoregulatorio/TreinamentoRegulatorio3.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorio3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento Regulatório</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -31,7 +31,7 @@
     <h3> Relatório Print PB </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=83c64133-ccf1-472b-8e73-2dd568f2a730&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e54c94d7-b639-46b9-8114-f8162a67d8b6&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="Relatórios-Print PB- Modulo Regulatório.mp4"></iframe>
         <br>
