--- a/treinamentotecnologia/TreinamentoTecnologia_Polo.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Polo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos</title>
+    <title>Treinamento Polotrail</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -33,10 +33,10 @@
     </div>
     <script>
         document.getElementById("Botaoapresentacao").onclick = function () {
-            window.location.href = "https://netorgft4487772.sharepoint.com/:b:/s/ScienceValley/EYNY1TcEv75CrDxNty7SziABbk4WbsRK6Him05cKmnciRA?e=ESaTh9"
+            window.location.href = "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=111012ee-ea2e-47db-ba5b-b56815cdca27"
         };
         document.getElementById("Botaotreinopolotrail").onclick = function () {
-            window.location.href = "https://netorgft4487772.sharepoint.com/:b:/s/ScienceValley/EUH8vHIhm_ZGn6vSXaprHtIBcnbgcbh-GPyXo2wtYlVscQ?e=o4luX9"
+            window.location.href = "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=2f0a924d-db38-46de-a8de-a5d8451a55cc"
         };
         document.getElementById("Botaovideopolotrail").onclick = function () {
             window.location.href = "TreinamentoTecnologia_PoloVideo.html"
