--- a/treinamentoacademy/TreinamentoAcademy.html
+++ b/treinamentoacademy/TreinamentoAcademy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento Academy</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -24,12 +24,12 @@
     </div>
     <br>
     <br>
-    <h2>T R E I N A M E N T O - F E A S I B I L I T Y</h2>
+    <h2>T R E I N A M E N T O - A C A D E M Y</h2>
     <br>
-    <h3> Feasibility </h5>
+    <h3> Pipeline  </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772-my.sharepoint.com/personal/camilla_ribeiro_svriglobal_com/_layouts/15/embed.aspx?UniqueId=51c476f7-a071-4e8e-aacb-115e1b28e3c5&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=bc7f67ce-0900-4759-b6b8-b18d19fe6fcb&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="Call gravar-20240311_094858-Gravação de Reunião.mp4"></iframe>
         <br>
