--- a/treinamentofeasibility/TreinamentoFeasibility.html
+++ b/treinamentofeasibility/TreinamentoFeasibility.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos</title>
+    <title>Feasibility</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
