--- a/treinamentolgpd/TreinamentosLGPD.html
+++ b/treinamentolgpd/TreinamentosLGPD.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento LGPD</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -41,7 +41,7 @@
     <h3> O que é a Lei Geral de Proteção de Dados LGPD </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=94b6b8ee-9be3-47e4-a013-70d6c9c8774e&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3925cfa1-f13a-4d34-9e5e-6421ade8e864&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 1 - O que é a Lei Geral de Proteção de Dados LGPD.mp4"></iframe>
         <br>
