--- a/treinamentolgpd/TreinamentosLGPD10.html
+++ b/treinamentolgpd/TreinamentosLGPD10.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento LGPD</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -41,7 +41,7 @@
     <h3> O papel da liderança na conformidade à LGPD</h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e201796b-d1c2-4820-94e8-131229e7e361&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=f5b0f446-f7cd-47b9-85eb-5d0e96b37714&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 10 - O papel da liderança na conformidade à LGPD.mp4"></iframe>
         <br>
