--- a/treinamentolgpd/TreinamentosLGPD9.html
+++ b/treinamentolgpd/TreinamentosLGPD9.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento LGPD</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -41,7 +41,7 @@
     <h3> O Projeto LGPD na instituição </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=603bd452-631b-46dc-94b8-7fbcf252e43c&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=4e90d8e0-4c7b-4165-af65-6b381c03b6e2&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 09 - O Projeto LGPD na instituição v1.mp4"></iframe>
         <br>
