--- a/treinamentoqualidade/TreinamentoQualidade2.html
+++ b/treinamentoqualidade/TreinamentoQualidade2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento Qualidade</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -30,7 +30,7 @@
     <h3> Como obter folha de rosto </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=f78df90e-55ac-466d-91b0-c2c2df147cdc&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=9a36730d-941d-464c-a303-d7231a0aaedc&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="Treinamento PB_ como obter folha de rosto.-20230502_101101-Gravação de Reunião.mp4"></iframe>
         <br>
