--- a/treinamentoregulatorio/TreinamentoRegulatorio2.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorio2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento Regulatório</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -31,7 +31,7 @@
     <h3> CEP - CONEP </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=7ec38590-6510-4e0b-9538-bf13ebeecb52&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=04dc508c-9b16-4ecb-b57b-a6ef7ffd3039&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="Plataforma Brasil-CEP-CONEP.mp4"></iframe>
         <br>
