--- a/treinamentoregulatorio/TreinamentoRegulatorio4.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorio4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento Regulatório</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
@@ -31,7 +31,7 @@
     <h3> Troca de documentos iniciais </h5>
         <br>
         <iframe class="video"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d5a6b127-37bc-457f-8774-b090ffcabef3&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=bf95ec30-035a-4c1d-a983-e87b1b73ea20&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="Platafórma Regulatório - Troca de documentos iniciais.mp4"></iframe>
         <br>
