--- a/centraltreinamentos/centralTreinamentos.html
+++ b/centraltreinamentos/centralTreinamentos.html
@@ -53,8 +53,9 @@
         </div>
         <div class="conteinerbotao">
             <button id="Botaofeasibility" class="botao-link"> Treinamento Feasibility </button>
+            <button id="Botaopop" class="botao-link"> Sessão de Pops </button>
         </div>
-    </div>
+
     <script src="../code.js"></script>
 </body>
 
